--- a/docs/book/Dockerfile
+++ b/docs/book/Dockerfile
@@ -17,7 +17,7 @@ FROM python:3.7
 EXPOSE 4000
 RUN curl -sL https://deb.nodesource.com/setup_11.x | bash
 
-RUN apt-get update && apt-get install -y nodejs npm && apt-get clean;
+RUN apt-get update && apt-get --no-install-recommends install -y nodejs npm && apt-get clean;
 RUN npm install gitbook-cli -g
 
 WORKDIR /opt/book/
